--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <head><title>Cornify</title></head>
 <body>
   <h1>Cornify</h1>
+  <script type="text/javascript" src="https://jeffhow.github.io/Cornify/js/cornify.js"></script>
+  <script>
+  document.querySelector('body').addEventListener('click', () => cornify_add());
+  </script>
 </body>
 </html>
